mettre a jour titre

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="row">
           <div class="col-lg-8 col-lg-push-2 col-sm-8 col-sm-push-2 col-xs-12 col-xs-push-0">
             <div class="hero-text text-center wow fadeIn">
-              <h1 class="hero-title title-lg">Work Faster Better</h1>
-              <h4 alt="Sencillo" class="hero-subtitle">Sencillo offers easy and elegant prototyping, collaboration & workflow platform for everyone. Lets enjoy it!</h4>
+              <h1 class="hero-title title-lg">Créateur de logiciels innovants</h1>
+              <h4 alt="Sencillo" class="hero-subtitle">Prtenaire de votre efficacité</h4>
               <a alt="Sencillo" href="#" class="btn btn-default">explore</a>
             </div>
           </div>
@@ -102,7 +102,7 @@
           <!-- content -->
           <div class="col-lg-5 col-sm-6 col-xs-12 text-content">
             <div class="section-title-content">
-              <h2 alt="Sencillo" class="section-title wow fadeInLeft">Powerful great tools</h2>
+              <h2 alt="Sencillo" class="section-title wow fadeInLeft">Nos meilleurs outils</h2>
               <h5 alt="Sencillo" class="section-sub-title wow fadeInLeft">Lorem Ipsum is simply dummy text</h5>
             </div>
             <p class="wow fadeInUp">
@@ -165,8 +165,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title-content text-center">
-              <h2 alt="Sencillo" class="section-title wow fadeInUp">How Sencillo works?</h2>
-              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Lorem Ipsum is simply dummy text</h5>
+              <h2 alt="Sencillo" class="section-title wow fadeInUp">Comment ça marche ?</h2>
+              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Vous êtes ?</h5>
             </div>
           </div>
           <div class="clear"></div>
@@ -175,7 +175,8 @@
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
             <div class="content wow fadeInLeft">
               <img alt="Sencillo" class="feature-icon" src="img/icons/icon-1.png">
-              <h4 alt="Sencillo" class="section-subtitle">Download</h4>
+              <h4 alt="Sencillo" class="section-subtitle">Installateur, Artisan
+Entreprise du bâtiment</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
           </div>
@@ -185,8 +186,9 @@
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
             <div class="content wow fadeInUp" data-wow-delay="0.2s">
               <img alt="Sencillo" class="feature-icon" src="img/icons/icon-2.png">
-              <h4 alt="Sencillo" class="section-subtitle">Install</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <h4 alt="Sencillo" class="section-subtitle">Dépanneur
+Société de maintenance</h4>
+              <p></p>
             </div>
           </div>
           <!-- /key-content -->
@@ -195,7 +197,8 @@
           <div class="col-lg-4 col-lg-push-0 col-md-4 col-md-push-0 col-sm-6 col-sm-push-3 col-xs-12 col-xs-push-0 text-center">
             <div class="content wow fadeInRight" data-wow-delay="0.4s">
               <img alt="Sencillo" class="feature-icon" src="img/icons/icon-3.png">
-              <h4 alt="Sencillo" class="section-subtitle">Tap & Enjoy</h4>
+              <h4 alt="Sencillo" class="section-subtitle">PME
+Chargé d’affaires</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
           </div>
@@ -211,8 +214,8 @@
         <div class="row">
           <div class="col-lg-5 col-sm-6 col-xs-12">
             <div class="section-title-content">
-              <h2 alt="Sencillo" class="section-title text-left wow fadeInUp">Made for you</h2>
-              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Lorem Ipsum is simply dummy text</h5>
+              <h2 alt="Sencillo" class="section-title text-left wow fadeInUp">Gamme MOBILOutils</h2>
+              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Une révolution</h5>
             </div>
           </div>
           <div class="clear"></div>
@@ -220,19 +223,19 @@
           <div class="col-lg-5 col-sm-6 col-xs-12 content">
             <div class="col-lg-12 wow fadeInLeft">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-4.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Grow with us</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MOBILOutils</h4>
               <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
 
             <div class="col-lg-12 wow fadeInLeft" data-wow-delay="0.2s">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-5.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Focus on what matters</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MOBILSynchro</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
 
             <div class="col-lg-12 wow fadeInLeft" data-wow-delay="0.4s">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-6.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Stay on top of meetings</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MOBILOutils Light</h4>
               <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
@@ -252,38 +255,45 @@
         <div class="row">
           <div class="col-lg-12 col-sm-12">
             <div class="section-title-content text-center">
-              <h2 alt="Sencillo" class="section-title wow fadeInUp">It's so special!</h2>
-              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Lorem Ipsum is simply dummy text</h5>
+              <h2 alt="Sencillo" class="section-title wow fadeInUp">Nos logiciels</h2>
+              <h5 alt="Sencillo" class="section-sub-title wow fadeInUp">Simplicité efficacité</h5>
             </div>
           </div>
           <div class="clear"></div>
 
-          <div class="col-lg-5 col-lg-push-1 col-sm-6 col-sm-push-0 col-xs-12 col-xs-push-0 content">
+          <div class="col-lg-5 col-lg-push-1 col-sm-4 col-sm-push-0 col-xs-12 col-xs-push-0 content">
             <div class="col-lg-12 wow fadeInLeft">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-7.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Grow with us</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MSBAT</h4>
               <p>Lorem Ipsum has been the industry's standard dummy text ever.</p>
             </div>
 
             <div class="col-lg-12 wow fadeInLeft" data-wow-delay="0.2s">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-8.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Focus on what matters</h4>
+              <h4 alt="Sencillo" class="section-subtitle">mobilMetre</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+                <div class="col-lg-12 wow fadeInLeft" data-wow-delay="0.2s">
+              <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-8.png"></span>
+              <h4 alt="Sencillo" class="section-subtitle">mobilMetre</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
           </div>
 
-          <div class="col-lg-5 col-lg-push-1 col-sm-6 col-sm-push-0 col-xs-12 col-xs-push-0 content">
+          <div class="col-lg-5 col-lg-push-1 col-sm-4 col-sm-push-0 col-xs-12 col-xs-push-0 content">
             <div class="col-lg-12 wow fadeInRight">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-9.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Focus on what matters</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MOBIL3D</h4>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
 
             <div class="col-lg-12 wow fadeInRight" data-wow-delay="0.2s">
               <span><img alt="Sencillo" class="feature-icon" src="img/icons/icon-10.png"></span>
-              <h4 alt="Sencillo" class="section-subtitle">Stay on top of meetings</h4>
+              <h4 alt="Sencillo" class="section-subtitle">MOBILChantiers</h4>
               <p>Lorem Ipsum has been the industry's standard dummy text ever.</p>
             </div>
+              
+              
           </div>
           <div class="clear"></div>
 
