--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sencillo: App Landing Template</title>
+    <title>Mobil software</title>
     <link rel="icon" href="img/fabicon.png">
 
     <!-- Font -->
